--- a/frontmatter.html
+++ b/frontmatter.html
@@ -119,14 +119,14 @@ eBookConfig.allow_pairs = false;
 eBookConfig.enableScratchAC = false;
 eBookConfig.build_info = "";
 eBookConfig.python3 = null;
-eBookConfig.runestone_version = '7.6.5';
+eBookConfig.runestone_version = '7.7.0';
 eBookConfig.jobehost = '';
 eBookConfig.proxyuri_runs = '';
 eBookConfig.proxyuri_files = '';
 eBookConfig.enable_chatcodes =  false;
 </script>
 <!--*** Runestone Services ***-->
-<script src="_static/prefix-runtime.052b07dd5d5bd82e.bundle.js"></script><script src="_static/prefix-723.3e6434f80549315a.bundle.js"></script><script src="_static/prefix-runestone.253ff4af1e53e55f.bundle.js"></script><link rel="stylesheet" type="text/css" href="_static/prefix-723.3bccd435914aa0ff.css">
+<script src="_static/prefix-runtime.5eb70769dc5e56d7.bundle.js"></script><script src="_static/prefix-723.3e6434f80549315a.bundle.js"></script><script src="_static/prefix-runestone.253ff4af1e53e55f.bundle.js"></script><link rel="stylesheet" type="text/css" href="_static/prefix-723.3bccd435914aa0ff.css">
 <link rel="stylesheet" type="text/css" href="_static/prefix-runestone.5bdeacdba067a0e3.css">
 <script src="_static/pretext/js/pretext-webwork/2.17/pretext-webwork.js"></script><script src="https://webwork-ptx.aimath.org/webwork2_files/node_modules/iframe-resizer/js/iframeResizer.min.js"></script><script src="_static/pretext/js/lti_iframe_resizer.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.9/lunr.min.js" integrity="sha512-4xUl/d6D6THrAnXAwGajXkoWaeMNwEKK4iNfq5DotEbLPAfk6FSxSP3ydNxqDgCw1c/0Z1Jg6L8h2j+++9BZmg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><script src="lunr-pretext-search-index.js" async=""></script><script src="_static/pretext/js/pretext_search.js"></script><script src="_static/pretext/js/lib/knowl.js"></script><!--knowl.js code controls Sage Cells within knowls--><script>sagecellEvalName='Evaluate (Sage)';
 </script>
@@ -391,9 +391,9 @@ eBookConfig.enable_chatcodes =  false;
 </h2>
 <div class="author">
 <div class="author-name">Hannah Kurzweil</div>
-<div class="author-info">Data Science 4 Everyone</div>
+<div class="author-info">Fort Lewis College</div>
 </div>
-<div class="date">May 16, 2025</div>
+<div class="date">May 20, 2025</div>
 <section class="introduction" id="frontmatter-3"><div class="para" id="frontmatter-3-1">Data shapes our world through countless decisions every day. From personalized music recommendations to content algorithms, and even critical determinations like educational assistance eligibility—data science powers it all. Behind these systems are algorithms—structured sets of rules that computers follow to transform raw information into actionable insights.</div>
 <div class="para" id="frontmatter-3-2">The field of data science harnesses these algorithmic tools to extract meaning from vast datasets, offering powerful capabilities while requiring careful consideration. When data-driven systems determine academic outcomes or financial opportunities, we must question how these mechanisms work and who designs them. Transparency matters.</div>
 <div class="para" id="frontmatter-3-3">In this introduction to data science course, you’ll explore the fundamental concepts behind data collection, analysis, and interpretation. You’ll discover how personal data fuels decision-making processes and the real-world impacts these decisions have on individuals and communities. By understanding both the technical aspects and ethical dimensions of data science, you’ll be equipped to harness its potential responsibly while recognizing its limitations.</div>
